--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
@@ -13,6 +13,10 @@
     $gap: var(--spacing-md)
   );
   height: 100%;
+
+  .loading-wrapper {
+    height: 100%;
+  }
 }
 
 .scheduling-table-container {
