--- a/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
+++ b/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
@@ -1,4 +1,10 @@
 <div class="academic-year-container">
+  @if (isLoading) {
+  <div class="loading-wrapper">
+    <app-loading></app-loading>
+  </div>
+  } @else {
+
   <div class="academic-year-header-container" [@fadeAnimation]>
     <app-table-header
       [inputFields]="headerInputFields"
@@ -19,8 +25,12 @@
     <div class="table-container">
       <table mat-table [dataSource]="programs" class="custom-table">
         <ng-container matColumnDef="index">
-          <th mat-header-cell *matHeaderCellDef class="custom-header index">#</th>
-          <td mat-cell *matCellDef="let element; let i = index" class="index">{{ i + 1 }}</td>
+          <th mat-header-cell *matHeaderCellDef class="custom-header index">
+            #
+          </th>
+          <td mat-cell *matCellDef="let element; let i = index" class="index">
+            {{ i + 1 }}
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="program_code">
@@ -94,4 +104,5 @@
       </table>
     </div>
   </div>
+  }
 </div>
