improve UI styling

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -127,6 +127,10 @@ span[mat-symbol] {
   user-select: none;
 }
 
+.loading-wrapper {
+  height: 100%;
+}
+
 .dialog-generic-logout {
   width: var(--dialog-small);
 }
