add date input fields when setting active year and semester

--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.scss
@@ -55,7 +55,7 @@
     }
   
     .custom-cell {
-      padding: var(--spacing-sm);
+      padding: var(--spacing-xs);
       text-align: center;
 
       .edit-button {
