--- a/frontend/src/app/shared/dialog-time/dialog-time.component.html
+++ b/frontend/src/app/shared/dialog-time/dialog-time.component.html
@@ -6,13 +6,30 @@
   </h2>
   <!--Dialog fields-->
   <mat-dialog-content>
+      <mat-checkbox [(ngModel)]="isWholeDay" (change)="onWholeDayChange()">
+        Whole Day
+      </mat-checkbox>
+
+    @if (!isWholeDay) {
     <mat-form-field appearance="fill" class="dialog-field">
       <mat-label>Start Time</mat-label>
       <mat-select
         [(ngModel)]="startTime"
         (selectionChange)="onStartTimeChange()"
+        [disabled]="isWholeDay"
       >
-        @for (time of timeOptions; track time) {
+      @for (time of timeOptions; track time) {
+        <mat-option [value]="time">
+          {{ time }}
+        </mat-option>
+      }
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill" class="dialog-field">
+      <mat-label>End Time</mat-label>
+      <mat-select [(ngModel)]="endTime" [disabled]="isWholeDay">
+        @for (time of endTimeOptions; track time) {
         <mat-option [value]="time">
           {{ time }}
         </mat-option>
@@ -20,38 +37,22 @@
       </mat-select>
     </mat-form-field>
 
-    <mat-form-field appearance="fill" class="dialog-field">
-      <mat-label>End Time</mat-label>
-      <mat-select [(ngModel)]="endTime">
-        @for (time of endTimeOptions; track time) {
-        <mat-option [value]="time">
-          {{ time }}
-        </mat-option>
-        }
-      </mat-select>
-      @if (!isEndTimeValid()) {
+    @if (startTime && endTime && !isEndTimeValid()) {
       <mat-error>End time must be after start time</mat-error>
-      }
-    </mat-form-field>
+    }
+    }
   </mat-dialog-content>
+
   <!--Dialog buttons-->
   <mat-dialog-actions class="dialog-actions">
-    <!--Cancel button-->
-    <button mat-button class="cancel" (click)="onCancel()">
-      <span>Cancel</span>
+    <button mat-button class="cancel" 
+      (click)="onCancel()">
+      Cancel
     </button>
-    <!--Confirm button-->
-    <button
-      mat-flat-button
-      class="confirm"
-      (click)="onConfirm()"
-      [ngClass]="{
-        'button-enabled': isEndTimeValid(),
-        'button-disabled': !isEndTimeValid()
-      }"
-      [disabled]="!isEndTimeValid()"
-    >
-      <span>Confirm</span>
+    <button mat-flat-button class="confirm" 
+      (click)="onConfirm()" 
+      [disabled]="!isWholeDay && (!startTime || !endTime || !isEndTimeValid())">
+      Confirm
     </button>
   </mat-dialog-actions>
 </div>
