add dialog scheduling component

--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -137,7 +137,7 @@
             <button
               mat-button
               class="edit-button"
-              (click)="openEditDialog(element)"
+              (click)="openEditDialog()"
             >
               <mat-icon>edit</mat-icon>
               <span>Edit</span>
