--- a/frontend/src/styles/m3-theme.scss
+++ b/frontend/src/styles/m3-theme.scss
@@ -75,7 +75,7 @@ $_palettes: (
     99: #fffbff,
     100: #ffffff,
     4: #120d0c,
-    6:  #1f1f1f, // default: #181211
+    6:  #1a1a1a, // default: #181211
     12: #251e1d,
     17: #2f2827,
     22: #3b3332,
