--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -17,6 +17,8 @@
   --neutral-button: #535353;
   --neutral-button-lighter: #474747;
   --neutral-space: #efefef;
+  --neutral-extra: #f6efed;
+  --neutral-extra-dark: #e4d4d1;
 
   /* Primary colors variations */
   --primary-one: #800000;
@@ -66,6 +68,8 @@
   --neutral-button: #3a3a3a;
   --neutral-button-lighter: #afafaf;
   --neutral-space: #171717;
+  --neutral-extra: #252525;
+  --neutral-extra-dark: #363636;
 
   /* Primary colors variations */
   --primary-one: #a93232;
