minor ui improvements

--- a/frontend/src/styles/m3-theme.scss
+++ b/frontend/src/styles/m3-theme.scss
@@ -14,7 +14,7 @@ $_palettes: (
     50: #d44433,
     60: #f75d49,
     70: #ff8a78,
-    80: #a93232, // default: #ffb4a8
+    80: #a93232, // default: #ffb4a8 // alt: #e15d5d
     90: #ffdad4,
     95: #ffedea,
     98: #fff8f6,
