--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -26,6 +26,7 @@
   --primary-fade: #80000020;
   --primary-text: #800000;
   --primary-hover: #e3d9d9;
+  --primary-warning: #bb1f1f;
 
   --primary-one-fade: #98292947;
 
@@ -77,6 +78,7 @@
   --primary-fade: #a932321a;
   --primary-text: #e15d5d;
   --primary-hover: #2b2121;
+  --primary-warning: #ffb4ab;
 
   --primary-one-fade: #ff3c3c38;
 
