prepare schedule validator

--- a/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.html
+++ b/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.html
@@ -132,6 +132,11 @@
           </mat-error>
         </mat-form-field>
       </form>
+
+      <!--Schedule Validator-->
+      <div class="schedule-validator">
+        
+      </div>
     </mat-dialog-content>
 
     <!-- Action Buttons -->
