--- a/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.html
+++ b/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.html
@@ -11,7 +11,7 @@
     <mat-dialog-content class="content faculty-list">
       <div *ngFor="let faculty of suggestedFaculty" class="faculty-item">
         <span class="faculty-name">{{ faculty.name }}</span>
-        <span class="faculty-time">{{ faculty.time }}</span>
+        <span class="faculty-time">{{ faculty.day }}, {{ faculty.time }}</span>
       </div>
     </mat-dialog-content>
   </section>
@@ -48,65 +48,74 @@
           </mat-error>
         </mat-form-field>
 
-        <!-- Start Time Field -->
-        <mat-form-field class="scheduling-forms">
-          <mat-label>Start Time</mat-label>
-          <mat-icon
-            matPrefix
-            [ngClass]="{
-              'invalid-icon':
-                scheduleForm.get('startTime')?.invalid &&
-                scheduleForm.get('startTime')?.touched
-            }"
-            >access_time_filled</mat-icon
-          >
-          <mat-select formControlName="startTime" required>
-            <mat-option *ngFor="let time of timeOptions" [value]="time">{{
-              time
-            }}</mat-option>
-          </mat-select>
-          <mat-error
-            *ngIf="scheduleForm.get('startTime')?.hasError('required')"
-          >
-            Start time is required.
-          </mat-error>
-        </mat-form-field>
+        <!-- Start and End Date Fields -->
+        <div class="date-fields">
+          <!-- Start Time Field -->
+          <mat-form-field class="scheduling-forms">
+            <mat-label>Start Time</mat-label>
+            <mat-icon
+              matPrefix
+              [ngClass]="{
+                'invalid-icon':
+                  scheduleForm.get('startTime')?.invalid &&
+                  scheduleForm.get('startTime')?.touched
+              }"
+              >access_time_filled</mat-icon
+            >
+            <mat-select formControlName="startTime" required>
+              <mat-option *ngFor="let time of timeOptions" [value]="time">
+                {{ time }}
+              </mat-option>
+            </mat-select>
+            <mat-error
+              *ngIf="scheduleForm.get('startTime')?.hasError('required')"
+            >
+              Start time is required.
+            </mat-error>
+          </mat-form-field>
 
-        <!-- End Time Field -->
-        <mat-form-field class="scheduling-forms">
-          <mat-label>End Time</mat-label>
-          <mat-icon
-            matPrefix
-            [ngClass]="{
-              'invalid-icon':
-                scheduleForm.get('endTime')?.invalid &&
-                scheduleForm.get('endTime')?.touched
-            }"
-            >access_time_filled</mat-icon
-          >
-          <mat-select formControlName="endTime" required>
-            <mat-option *ngFor="let time of endTimeOptions" [value]="time">{{
-              time
-            }}</mat-option>
-          </mat-select>
-          <mat-error *ngIf="scheduleForm.get('endTime')?.hasError('required')">
-            End time is required.
-          </mat-error>
-        </mat-form-field>
+          <!-- End Time Field -->
+          <mat-form-field class="scheduling-forms">
+            <mat-label>End Time</mat-label>
+            <mat-icon
+              matPrefix
+              [ngClass]="{
+                'invalid-icon':
+                  scheduleForm.get('endTime')?.invalid &&
+                  scheduleForm.get('endTime')?.touched
+              }"
+              >access_time_filled</mat-icon
+            >
+            <mat-select formControlName="endTime" required>
+              <mat-option *ngFor="let time of endTimeOptions" [value]="time">
+                {{ time }}
+              </mat-option>
+            </mat-select>
+            <mat-error
+              *ngIf="scheduleForm.get('endTime')?.hasError('required')"
+            >
+              End time is required.
+            </mat-error>
+          </mat-form-field>
+        </div>
 
         <!-- Professor Field -->
         <mat-form-field class="scheduling-forms">
           <mat-label>Professor</mat-label>
-          <mat-icon
-            matPrefix
-            [ngClass]="{
-              'invalid-icon':
-                scheduleForm.get('professor')?.invalid &&
-                scheduleForm.get('professor')?.touched
-            }"
-            >person</mat-icon
-          >
-          <input matInput formControlName="professor" />
+          <input
+            type="text"
+            matInput
+            formControlName="professor"
+            [matAutocomplete]="professorAuto"
+          />
+          <mat-autocomplete #professorAuto="matAutocomplete">
+            <mat-option
+              *ngFor="let professor of filteredProfessors | async"
+              [value]="professor"
+            >
+              {{ professor }}
+            </mat-option>
+          </mat-autocomplete>
           <mat-error
             *ngIf="scheduleForm.get('professor')?.hasError('required')"
           >
@@ -117,16 +126,20 @@
         <!-- Room Field -->
         <mat-form-field class="scheduling-forms">
           <mat-label>Room</mat-label>
-          <mat-icon
-            matPrefix
-            [ngClass]="{
-              'invalid-icon':
-                scheduleForm.get('room')?.invalid &&
-                scheduleForm.get('room')?.touched
-            }"
-            >meeting_room</mat-icon
-          >
-          <input matInput formControlName="room" />
+          <input
+            type="text"
+            matInput
+            formControlName="room"
+            [matAutocomplete]="roomAuto"
+          />
+          <mat-autocomplete #roomAuto="matAutocomplete">
+            <mat-option
+              *ngFor="let room of filteredRooms | async"
+              [value]="room"
+            >
+              {{ room }}
+            </mat-option>
+          </mat-autocomplete>
           <mat-error *ngIf="scheduleForm.get('room')?.hasError('required')">
             Room is required.
           </mat-error>
@@ -135,7 +148,17 @@
 
       <!--Schedule Validator-->
       <div class="schedule-validator">
-        
+        <!-- No conflicts detected message -->
+        <div *ngIf="!hasConflicts" class="validation-message no-conflict">
+          <span mat-symbol="check_circle"></span>
+          <span>All good! No scheduling conflicts have been detected.</span>
+        </div>
+
+        <!-- Conflicts detected message -->
+        <div *ngIf="hasConflicts" class="validation-message conflict">
+          <span mat-symbol="error"></span>
+          <span>Warning: Scheduling conflicts have been detected.</span>
+        </div>
       </div>
     </mat-dialog-content>
 
@@ -155,7 +178,7 @@
         <button
           class="action-button"
           mat-flat-button
-          [disabled]="!scheduleForm.valid"
+          [disabled]="!scheduleForm.valid || hasConflicts"
           (click)="onAssign()"
         >
           Assign Schedule
