--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -34,6 +34,7 @@
 
   --secondary-text: #957619;
   --secondary-hover: #a47f1a0b;
+  --secondary-fade: #80631520;
 
   /* Gradient-speficic values */
 
@@ -86,6 +87,7 @@
 
   --secondary-text: #cc9d1b;
   --secondary-hover: #cc9d1b08;
+  --secondary-fade: #cc9d1b20;
 
   /* Gradient-speficic values */
 
