minor styling improvements

--- a/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
+++ b/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
@@ -21,7 +21,7 @@
     ></app-table-header>
   </div>
 
-  <div class="academic-year-table-container" [@pageFloatUpAnimation]>
+  <div class="academic-year-table-container" [@fadeAnimation]>
     <div class="table-container">
       <table mat-table [dataSource]="programs" class="custom-table">
         <ng-container matColumnDef="index">
