--- a/frontend/src/app/core/components/admin/main/main.component.scss
+++ b/frontend/src/app/core/components/admin/main/main.component.scss
@@ -13,14 +13,16 @@
 }
 
 .sidenav-bar {
+  @include default-transition;
   width: 16rem;
   background-color: var(--admin-bg);
   padding: var(--spacing-sm) var(--spacing-md);
-  @include default-transition;
+  user-select: none;
 
   .side-toolbar {
     @include flex-layout($direction: column, $gap: var(--spacing-md));
     padding: var(--spacing-lg) var(--spacing-md);
+    
 
     img {
       width: 40%;
