minor component improvements

--- a/frontend/src/app/core/components/faculty/main/main.component.scss
+++ b/frontend/src/app/core/components/faculty/main/main.component.scss
@@ -171,10 +171,10 @@
           }
 
           &.logout {
-            color: var(--primary-one);
+            color: var(--primary-text);
 
             span.material-symbols-rounded {
-              color: var(--primary-one);
+              color: var(--primary-text);
             }
 
             &:hover {
