--- a/frontend/src/app/core/components/superadmin/main/main.component.scss
+++ b/frontend/src/app/core/components/superadmin/main/main.component.scss
@@ -153,7 +153,6 @@
             border-radius: 50%;
             cursor: pointer;
             transition: all 0.3s ease;
-            @include gradient-primary-border;
 
             &:hover {
               box-shadow: 0 0 0 3px var(--neutral-hover);
@@ -185,10 +184,10 @@
               }
 
               &.logout {
-                color: var(--primary-one);
+                color: var(--primary-text);
 
                 span.material-symbols-rounded {
-                  color: var(--primary-one);
+                  color: var(--primary-text);
                 }
 
                 &:hover {
